Syntax/Normal/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Syntax.Normal.Par
  ( happyError
  , myLexer
  , pListExpr1
  , pExpr1
  , pExpr
  , pExpr2
  , pExpr3
  ) where

import Prelude

import qualified Syntax.Normal.Abs
import Syntax.Normal.Lex

}

%name pListExpr1 ListExpr1
%name pExpr1 Expr1
%name pExpr Expr
%name pExpr2 Expr2
%name pExpr3 Expr3
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('        { PT _ (TS _ 1)  }
  ')'        { PT _ (TS _ 2)  }
  ','        { PT _ (TS _ 3)  }
  ';'        { PT _ (TS _ 4)  }
  '='        { PT _ (TS _ 5)  }
  '=>'       { PT _ (TS _ 6)  }
  'apply'    { PT _ (TS _ 7)  }
  'else'     { PT _ (TS _ 8)  }
  'false'    { PT _ (TS _ 9)  }
  'function' { PT _ (TS _ 10) }
  'if'       { PT _ (TS _ 11) }
  'iszero'   { PT _ (TS _ 12) }
  'macro'    { PT _ (TS _ 13) }
  'pred'     { PT _ (TS _ 14) }
  'print'    { PT _ (TS _ 15) }
  'succ'     { PT _ (TS _ 16) }
  'then'     { PT _ (TS _ 17) }
  'true'     { PT _ (TS _ 18) }
  '{'        { PT _ (TS _ 19) }
  '}'        { PT _ (TS _ 20) }
  L_Ident    { PT _ (TV $$)   }
  L_integ    { PT _ (TI $$)   }

%%

Ident :: { Syntax.Normal.Abs.Ident }
Ident  : L_Ident { Syntax.Normal.Abs.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

ListExpr1 :: { [Syntax.Normal.Abs.Expr] }
ListExpr1
  : {- empty -} { [] }
  | Expr1 { (:[]) $1 }
  | Expr1 ',' ListExpr1 { (:) $1 $3 }

Expr1 :: { Syntax.Normal.Abs.Expr }
Expr1
  : 'if' Expr2 'then' Expr2 'else' Expr2 { Syntax.Normal.Abs.If $2 $4 $6 }
  | 'function' Ident '=>' '{' Expr '}' { Syntax.Normal.Abs.Abstraction $2 $5 }
  | 'macro' Ident '=>' '{' Expr '}' { Syntax.Normal.Abs.LazyAbstraction $2 $5 }
  | Expr2 { $1 }

Expr :: { Syntax.Normal.Abs.Expr }
Expr
  : 'print' Expr1 ';' Expr { Syntax.Normal.Abs.Print $2 $4 }
  | Ident '=' Expr1 ';' Expr { Syntax.Normal.Abs.Assignment $1 $3 $5 }
  | Expr1 { $1 }

Expr2 :: { Syntax.Normal.Abs.Expr }
Expr2
  : 'apply' Expr3 '(' ListExpr1 ')' { Syntax.Normal.Abs.Application $2 $4 }
  | 'succ' Expr3 { Syntax.Normal.Abs.Succ $2 }
  | 'pred' Expr3 { Syntax.Normal.Abs.Pred $2 }
  | 'iszero' Expr3 { Syntax.Normal.Abs.IsZero $2 }
  | Expr3 { $1 }

Expr3 :: { Syntax.Normal.Abs.Expr }
Expr3
  : 'true' { Syntax.Normal.Abs.ConstTrue }
  | 'false' { Syntax.Normal.Abs.ConstFalse }
  | Integer { Syntax.Normal.Abs.ConstInteger $1 }
  | Ident { Syntax.Normal.Abs.Var $1 }
  | '(' Expr ')' { $2 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
